<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <EditText
                android:id="@+id/txtCarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/salmon"
                android:inputType="text"
                android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                android:hint="@string/carga"
                android:fontFamily="@font/electrolize"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <EditText
                    android:id="@+id/txtCantidad"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:backgroundTint="@color/salmon"
                    android:maxLength="2"
                    android:hint="@string/cantidad"
                    android:fontFamily="@font/electrolize"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toneladas"
                    android:textSize="15dp"
                    android:fontFamily="@font/electrolize"/>
            </LinearLayout>
            <Spinner
                android:id="@+id/tipoCaja_spinner"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/electrolize"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Switch
                    android:id="@+id/switchRControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rControl"
                    android:fontFamily="@font/electrolize"/>
                <Switch
                    android:id="@+id/switchFull"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full"
                    android:fontFamily="@font/electrolize"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/salmon"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/txtNomLugarSalida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/salmon"
                android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                android:hint="@string/hint_nombreLugarSalida"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/electrolize"/>
            <EditText
                android:id="@+id/txtNomLugarLlegada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/salmon"
                android:inputType="text"
                android:digits="abcdefghijklmnñopqrstuvxwyzABCDEFGHIJKLMNÑOPQRSTUVWXYZ "
                android:hint="@string/hint_nombreLugarLlegada"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/electrolize"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/Bfecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_fecha"
                    android:textColor="#ffffff"
                    android:background="@color/salmon"
                    android:onClick="pickerOnClick"
                    android:fontFamily="@font/electrolize"/>
                <TextView
                    android:id="@+id/efecha"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/Bhora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_hora"
                    android:textColor="#ffffff"
                    android:background="@color/salmon"
                    android:onClick="pickerOnClick"
                    android:fontFamily="@font/electrolize"/>
                <TextView
                    android:id="@+id/ehora"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$"
                    android:textSize="15dp"/>
                <EditText
                    android:id="@+id/txtPago"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberSigned"
                    android:backgroundTint="@color/salmon"
                    android:hint="@string/hint_pago"
                    android:fontFamily="@font/electrolize"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btnAgregaViaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrame"
                android:layout_gravity="center"
                android:background="@color/salmon"
                android:textColor="#ffffff"
                android:onClick="creaViaje"
                android:fontFamily="@font/electrolize"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>