<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:elevation="5dp"
            android:src="@drawable/d"
            android:scaleType="centerCrop"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">
                <TextView
                    android:id="@+id/nombreLugarSalida"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:text="Baja California Sur"
                    android:fontFamily="@font/electrolize"/>
                <TextView
                    android:id="@+id/nombreLugarLlegada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="San Luis Potosi"
                    android:layout_gravity="right"
                    android:textSize="25sp"
                    android:fontFamily="@font/electrolize"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/hint_fecha"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/fechaAproxSalida"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carga"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/carga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/cantidad"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/cantidadCarga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/tipoCaja"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/tipoCaja"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_pago"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/pago"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dobleRemolque"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/dobleRemolque"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RControl"
                        android:textSize="18sp"
                        android:fontFamily="@font/electrolize"/>
                    <TextView
                        android:id="@+id/rControl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_gravity="end"
                        android:fontFamily="@font/electrolize"/>
                </FrameLayout>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regresar"
                    android:background="@color/salmon"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_marginTop="40dp"
                    android:onClick="regresar"
                    android:layout_gravity="center"
                    android:fontFamily="@font/electrolize"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cierra_Sesion"
                    android:background="@color/salmon"
                    android:textColor="#ffffff"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:onClick="cierraSesion"
                    android:layout_gravity="center"
                    android:fontFamily="@font/electrolize"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>